# StaticNet

./: .gitignore  BUILD  CMakeLists.txt  Fixed8Bit.h  FixedLinearRegression.cpp  FixedLinearRegression.h  LinearRegression.cpp  LinearRegression.h  MyFixNet.cpp  MyFixNet.h  MyNet.h  README.md  Vector.h  bazel-SingleNet  bazel-bin  bazel-out  bazel-testlogs  main.cpp  main.cu
Core/: BUILD  CMakeLists.txt  Layers.cpp  Layers.cu  Layers.h
Core/Datasets/: BUILD  CMakeLists.txt  Datasets.cpp  Datasets.h
Core/Defines/: CMakeLists.txt  Defines.cpp  Defines.cu  Defines.cuh  Defines.h
Core/Vector/: BUILD  CMakeLists.txt  Vector.cu  Vector.h  VectorCUDA.cu  VectorCUDA.h  Vector_cuda.cu
Datasets/: Datasets.cpp  Datasets.h
Defines/: Defines.h
Fixed/: Fixed8bit.cpp  FixedLinearRegression.cpp  FixedLinearRegression.h  sigmoid.h
Float/: Aww.h  Layer.cpp  Layer.h  Layers.h  LogisticClassification.cpp  LogisticClassification.h  LogisticRegression.cpp  LogisticRegression.h  MultiLayer.cpp  MultiLayer.h  MultiLayerClassification.cpp  MultiLayerClassification.h  Node.cpp  Node.h
Structure/: Vector.cc  Vector.cpp  Vector.h  Vector1D.cpp  Vector1D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
Tools/: Datasets.cpp  Datasets.h  Defines.h  ModelData.cpp  ModelData.h  ProgressBar.cpp  ProgressBar.h  StackTrace.cpp  StackTrace.h  load_mnist.cpp  load_mnist.h  model_data_defines.h  parse_arguments.h  save_model_data.cpp  save_model_data.h  vector_helper.cpp  vector_helper.h
include/: Datasets.h  Defines.h  Layers.h  Module.h  Tensor.h
include/Models/: AffineNet.h  LeNet.h  ReNet.h
include/Modules/: AvgPool2D.h  Conv2D.h  Linear.h  ReLU.h
include/Utils/: Random.h
src/: Datasets.cc  Defines.cc  Layers.cc
src/Utils/: Random.cc
test/: CMakeLists.txt  test_calculation_float.cc  test_calculation_int.cc  test_complex_calculation.cc  test_constructor.cc  test_iterator.cc  test_mnist.cc  test_module.cc  test_slice.cc  test_tensor.cc  test_transpose.cc
